a few important changes

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -72,8 +72,7 @@
             .then(
               function(registration) {
                 console.log(
-                  "Service Worker registration successful",
-                  registration.scope
+                  "Successful"
                 );
               },
               function(err) {
